# skillshare-mcp

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  run.py
.github/workflows/: release.yml
skillshare_mcp/: server.py
